# visual

./: Cargo.toml
src/: common.glsl  engine.rs  frag.glsl  frag2.glsl  frag3.glsl  main.rs  midi.rs  project.rs  project1.rs  project2.rs  project3.rs  rendering.rs  uniform_register.rs  utils.rs  vert.glsl
src/project1/: frag.glsl  mod.rs
src/project2/: frag.glsl  mod.rs
src/project3/: frag.glsl  mod.rs
src/project4/: frag.glsl  mod.rs
src/project5/: frag.glsl  mod.rs
