[package]
name = "visual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midi-msg = "0.4.0"
midir = "0.9.1"
once_cell = "1.18.0"
png = "0.17.8"
vulkano = "0.33.0"
vulkano-macros = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-util = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"
rand = "0.8.5"
cgmath = "0.18.0"
